--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,20 @@
 .App {
+/*   width: 100%;
+  height: 100vh;
+  display: block;
+  flex-wrap: wrap;
   text-align: center;
-  
- 
+  background-image: url('./imagenes/fondo\ home\ violeta.jpg');
+  image-rendering: auto;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  overflow: scroll;
+  overflow-x: hidden;
+  color: rgb(255, 255, 255);
+  margin-top: 0%; */
 }
 
 .App-logo {
