--- a/client/src/style/SearchBar.module.css
+++ b/client/src/style/SearchBar.module.css
@@ -1,8 +1,9 @@
 .buscador{
     border-radius: 25px;
+    padding-right: 25px;
   }
   .searchBar{
-    width: 250px;
+    width: 300px;
     height: 39px;
     padding:1px ;
     border-top-left-radius: 8px;
@@ -14,6 +15,7 @@
      height: 42px;
      border:2px;
      padding: 16px;
+     margin-right: 10px;
      border-bottom-right-radius: 8px;
      border-top-right-radius: 8px;
      background-image: url('../imagenes/lupaaassaa.jpeg');
