--- a/client/src/style/Home.module.css
+++ b/client/src/style/Home.module.css
@@ -31,7 +31,7 @@
   display: flex;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 35px;
+  padding-left: 25px;
 }
 
 .recargar {
@@ -42,6 +42,7 @@
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   font-size: large;
+  cursor: pointer;
 }
 
 .recargar:hover {
